k8s/dummy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  namespace: wizfi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
        - name: dummy-app
          image: hashicorp/http-echo
          args:
            - "-text=Well-known challenge OK!"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  namespace: wizfi
spec:
  selector:
    app: dummy-app
  ports:
    - port: 80
      targetPort: 8080
