k8s/wizfi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizfi-ingress
  namespace: wizfi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000

    - host: user.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

    - host: billing.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 3002

    - host: payments.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: payments-service
                port:
                  number: 3003

    - host: notify.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: notifications-service
                port:
                  number: 3004

    - host: analytics.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3005

    - host: admin.wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 3006

    - host: wizfiservices.duckdns.org
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3007
